overflow fixed

--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -210,7 +210,7 @@ div#slider figure {
   }
 
   .bg{
-    position: absolute;
+    position: fixed;
     bottom: 0;
     left: 0;
     width: 100vw;
